# caelum

./: Cargo.toml  deny.toml  keymap.toml  rustfmt.toml
caelum/: Cargo.toml
caelum/src/: main.rs
clm-core/: Cargo.toml
clm-core/src/: buffer.rs  command.rs  cursor.rs  editor.rs  event.rs  input.rs  lib.rs  mode.rs  plugin.rs  registry.rs  runtime.rs  value.rs
clm-core/src/event/: data.rs
clm-macros/: Cargo.toml
clm-macros/src/: lib.rs
clm-plugin-api/: Cargo.toml
clm-plugin-api/src/: core.rs  data.rs  input.rs  lib.rs  priority.rs
clm-plugin-api/src/data/: id.rs  input.rs  tui_layout.rs
clm-renderer/: Cargo.toml
clm-tui/: Cargo.toml
clm-tui/src/: main.rs  modal.rs
plugins/clm-buffer/: Cargo.toml
plugins/clm-buffer/src/: lib.rs
plugins/clm-cmdline/: Cargo.toml
plugins/clm-cmdline/src/: lib.rs
plugins/clm-editing/: Cargo.toml
plugins/clm-editor-tui/: Cargo.toml
plugins/clm-editor-tui/src/: lib.rs
plugins/clm-keymap/: Cargo.toml
plugins/clm-keymap/src/: lib.rs
plugins/clm-modal/: Cargo.toml
plugins/clm-modal/src/: lib.rs
plugins/clm-motions/: Cargo.toml
plugins/clm-motions/src/: lib.rs
plugins/clm-tui/: Cargo.toml
plugins/clm-tui-compositor/: Cargo.toml
plugins/clm-tui-compositor/src/: lib.rs  utility.rs
plugins/clm-tui-driver/: Cargo.toml
plugins/clm-tui-driver/src/: lib.rs
plugins/clm-tui/src/: lib.rs
