[package]
name = "caelum"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
clm-core = { path = "../clm-core" }
anyhow = "1"

clm-buffer = { path = "../plugins/clm-buffer" }
clm-keymap = { path = "../plugins/clm-keymap" }
clm-modal = { path = "../plugins/clm-modal" }
clm-tui-compositor = { path = "../plugins/clm-tui-compositor" }
clm-tui-driver = { path = "../plugins/clm-tui-driver" }
