[package]
name = "clm-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
clm-core = { path = "../clm-core" }
clm-macros = { path = "../clm-macros" }
serde = { version = "1", features = ["derive"] }
