[package]
name = "clm-modal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
clm-plugin-api = { path = "../../clm-plugin-api" }
clm-editor-tui = { path = "../clm-editor-tui" }
anyhow = "1"
unicode-width = "0.2"
