[package]
name = "clm-tui-compositor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
clm-plugin-api = { path = "../../clm-plugin-api" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
crossterm = "0.29"
unicode-width = "0.2"
