[package]
name = "clm-tui-compositor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
clm-plugin-api = { path = "../../clm-plugin-api" }
clm-tui-driver = { path = "../clm-tui-driver" }
unicode-width = "0.2"
