[package]
name = "clm-tui-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
clm-plugin-api = { path = "../../clm-plugin-api" }
serde = { version = "1", features = ["derive"] }
crossterm = "0.29"
