[package]
name = "clm-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
clm-plugin-api = { path = "../../clm-plugin-api" }
crossterm = "0.29"
unicode-width = "0.2"
